force-app/main/default/objects/Return_Item__c/Return_Item__c.object-meta.xml
<CustomObject>
    <label>Return Item</label>
    <nameField>
        <label>Return Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Return_Item__c</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>