force-app/main/default/objects/Return_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>