force-app/main/default/objects/Return_Item__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <description>Calculated refund amount (Quantity * Unit Price)</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Quantity__c * Unit_Price__c</formula>
</CustomField>