force-app/main/default/objects/Return_Item__c/fields/Return_Request__c.field-meta.xml
<CustomField>
    <fullName>Return_Request__c</fullName>
    <label>Return Request</label>
    <description>Parent Return Request</description>
    <type>MasterDetail</type>
    <referenceTo>Return_Request__c</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
</CustomField>