force-app/main/default/objects/Return_Item__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>